<resources>
    <string name="app_name">InClass06</string>
    <string name="chat_room_login">Login</string>
    <string name="chat_room_signup">Sign Up</string>
    <string name="sign_up_first_name">First Name</string>
    <string name="sign_up_last_name">Last Name</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_choose_password">Choose Password</string>
    <string name="sign_up_repeat_password">Repeat Password</string>
    <string name="sign_up_cancel">Cancel</string>
    <string name="sign_up_Sign_Up">Sign Up</string>
    <string name="message_threads_signout">Sign Out</string>
    <string name="message_threads_Message_Threads">Current Threads</string>
    <string name="title_activity_messsage_threads">messsage_threads</string>
    <string name="message_threads_add_new_thread">Add New Thread</string>
    <string name="message_threads_add_thread">+</string>
    <string name="list_view_item_delete">X</string>
</resources>
